--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facebook – log in or sign up</title>
-    <link rel="icon" href="/img/image-logo.png">
-    <link rel="stylesheet" href="/CSS/style.css">
-    <link rel="stylesheet" href="/CSS/tablet.css">
-    <link rel="stylesheet" href="/CSS/phone.css">
+    <link rel="icon" href="img/image-logo.png">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/tablet.css">
+    <link rel="stylesheet" href="CSS/phone.css">
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +24,7 @@
 
         <div id="right">
             <a href="#" id="lang">English(UK)</a>
-            <img src="/img/image-logo.png" alt="facebook" id="img-phone">
+            <img src="img/image-logo.png" alt="facebook" id="img-phone">
             <form>
                 <input type="text" required id="Email" class="input-box" name="Email"
                     placeholder="Email address or phone number">
